ajustada referencias e pequenas melhorias